Implement GET /deviceStatus API of PhysicalUEProxy.
