# physical_ue_proxy/server/models/cell_connection_status.py
@@ -1,0 +1,36 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from server.models.base_model_ import Model
+from server import util
+
+
+class CellConnectionStatus(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self):  # noqa: E501
+        """CellConnectionStatus - a model defined in Swagger
+
+        """
+        self.swagger_types = {
+        }
+
+        self.attribute_map = {
+        }
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'CellConnectionStatus':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The CellConnectionStatus of this CellConnectionStatus.  # noqa: E501
+        :rtype: CellConnectionStatus
+        """
+        return util.deserialize_model(dikt, cls)
